Farve-projekt tilføjet

--- a/index.html
+++ b/index.html
@@ -303,13 +303,14 @@
                 </article>
             </article>
         </section>
-            <section class="little-projects">
-                <h2>Små hyggeprojekter</h2>
-                <div class="flex">
-            <article class="case-study animate-up">
+            <section>
+                <h2 class="little-projects">Hyggeprojekter</h2>
+                <p class="center">Mindre projekter lavet med Javascript.</p>
+                <div class="center flex">
+            <article class="case-study animate-up little-project">
                 <img src="assets/images/NASA-mockup.png" alt="">
                 <article>
-                    <h4>Mini-projekt:</h4>
+                    <h4>Projekt:</h4>
                     <h3>Dagens NASA-billede hentet med API og Javascript</h3>
                     <p>Designet og kodet side, der henter dagens astronomi-billede fra NASA med Javascript og API.</p>
                     <div class="used-skills-container">
@@ -323,11 +324,11 @@
                     <a class="button" href="https://mmd.ucn.dk/class/mmd-csd-s22/10407731/Rubric%20NASA%20APOD/">Se live version <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 512 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><style>svg{fill:#64ffda}</style><path d="M0 256a256 256 0 1 0 512 0A256 256 0 1 0 0 256zM241 377c-9.4 9.4-24.6 9.4-33.9 0s-9.4-24.6 0-33.9l87-87-87-87c-9.4-9.4-9.4-24.6 0-33.9s24.6-9.4 33.9 0L345 239c9.4 9.4 9.4 24.6 0 33.9L241 377z"/></svg></a>
                 </article>
             </article>
-            <article class="case-study animate-up">
-                <img src="" alt="">
+            <article class="case-study animate-up little-project">
+                <img src="assets/images/farvevalg.png" alt="Mockup af farvevælger-projekt">
                 <article>
-                    <h4>Mini-projekt</h4>
-                    <h3>Passer farverne sammen?</h3>
+                    <h4>Projekt</h4>
+                    <h3>Tjek selv: Passer farverne sammen?</h3>
                     <p>Javascript-projekt, der ændrer farver på skærmen, når man klikker.</p>
                     <div class="used-skills-container">
                         <p class="used-skills">HTML</p>
@@ -336,7 +337,7 @@
                     </div>
                     <br>
                     <br>
-                    <a class="button" href="www.louiselyck.dk/farver">Se live version <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 512 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><style>svg{fill:#64ffda}</style><path d="M0 256a256 256 0 1 0 512 0A256 256 0 1 0 0 256zM241 377c-9.4 9.4-24.6 9.4-33.9 0s-9.4-24.6 0-33.9l87-87-87-87c-9.4-9.4-9.4-24.6 0-33.9s24.6-9.4 33.9 0L345 239c9.4 9.4 9.4 24.6 0 33.9L241 377z"/></svg></a>
+                    <a class="button" href="http://www.louiselyck.dk/farver">Se live version <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 512 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><style>svg{fill:#64ffda}</style><path d="M0 256a256 256 0 1 0 512 0A256 256 0 1 0 0 256zM241 377c-9.4 9.4-24.6 9.4-33.9 0s-9.4-24.6 0-33.9l87-87-87-87c-9.4-9.4-9.4-24.6 0-33.9s24.6-9.4 33.9 0L345 239c9.4 9.4 9.4 24.6 0 33.9L241 377z"/></svg></a>
                 
                 </article>
 
