Sektion med help-items tilføjet

--- a/sejrdavidsen.html
+++ b/sejrdavidsen.html
@@ -41,7 +41,7 @@
             <ul class="nav-menu">
                 <li class="nav-item"><a href="index.html" class="nav-link">Hjem</a></li>
                 <li class="nav-item"><a href="#om-louise" class="nav-link">Om Louise</a></li>
-                <li class="nav-item"><a href="#portfolio" class="nav-link">Case studies</a></li>
+                <li class="nav-item"><a href="#portfolio" class="nav-link">Projekter</a></li>
                 <li class="nav-item"><a href="assets/images/CV-Louise-Lyck.pdf" class="nav-link">CV</a></li>
                 <li class="nav-item"><a href="#kontakt" class="nav-link">Kontakt</a></li>
             </ul>
@@ -51,6 +51,7 @@
                 <span class="bar"></span>
             </div>
         </nav>
+        <div class="timeline"></div>
     </header>
     <main>    
         <h3 class="single-case-study-top-h2 animate-hero-single-case">Projekt:</h3>
