Tilføjet case-study med farvevælger

--- a/sejrdavidsen.html
+++ b/sejrdavidsen.html
@@ -40,10 +40,10 @@
             <a class="nav-logo" href="index.html">L.</a>
             <ul class="nav-menu">
                 <li class="nav-item"><a href="index.html" class="nav-link">Hjem</a></li>
-                <li class="nav-item"><a href="#om-louise" class="nav-link">Om Louise</a></li>
-                <li class="nav-item"><a href="#portfolio" class="nav-link">Projekter</a></li>
+                <li class="nav-item"><a href="index.html#om-louise" class="nav-link">Om Louise</a></li>
+                <li class="nav-item"><a href="index.html#portfolio" class="nav-link">Projekter</a></li>
                 <li class="nav-item"><a href="assets/images/CV-Louise-Lyck.pdf" class="nav-link">CV</a></li>
-                <li class="nav-item"><a href="#kontakt" class="nav-link">Kontakt</a></li>
+                <li class="nav-item"><a href="index.html#kontakt" class="nav-link">Kontakt</a></li>
             </ul>
             <div class="hamburger">
                 <span class="bar"></span>
