Mange små ændringer bla px til rem

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <li class="nav-item"><a href="#om-louise" class="nav-link">Om Louise</a></li>
                 <li class="nav-item"><a href="#portfolio" class="nav-link">Projekter</a></li>
                 <li class="nav-item"><a href="#kontakt" class="nav-link">Kontakt</a></li>
-                <li class="nav-button nav-item"><a href="assets/images/CV-Louise-Lyck.pdf" class="nav-link">Se Mit CV</a></li>
+                <li class="button nav-button nav-item"><a href="assets/images/CV-Louise-Lyck.pdf" class="nav-link">Se Mit CV</a></li>
             </ul>
             <div class="hamburger">
                 <span class="bar"></span>
