--- a/sejrdavidsen.html
+++ b/sejrdavidsen.html
@@ -30,7 +30,7 @@
     <script src="assets/script.js" defer></script>
     <title>Frontend-udvikler Louise Lyck Dreehsen</title>
 </head>
-<body class="single-case">
+<body>
     <!-- Google Tag Manager (noscript) -->
     <noscript>
         <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NDZKL3CW"
@@ -55,7 +55,7 @@
         </nav>
         <div class="timeline"></div>
     </header>
-    <main>    
+    <main class="single-case">    
         <h3 class="single-case-study-top-h2 animate-hero-single-case">Projekt:</h3>
         <h1 class="animate-hero-single-case">Sejr og Davidsens dyrepension og -internat</h1>
         <div class="single-casestudy-top animate-hero-single-case">
