Bug fixet med scroll på mobil

--- a/index.html
+++ b/index.html
@@ -80,8 +80,7 @@
                                 UX Designer<br> 
                                 UX Writer<br>
                                 UI Designer<br>
-                                Journalist<br>
-                                Content designer
+                                Journalist
                             </span>
                         </div>
                     </div>
@@ -121,7 +120,7 @@
                 </article>
             </div>
             </section >
-            <section class="viewheight">
+            <section class="viewheight offer-section">
                 <div class="flex center spacing">
                     <h2 class="animate-up det-kan-jeg">Det kan jeg tilbyde</h2>
                 </div>
