--- a/sejrdavidsen.html
+++ b/sejrdavidsen.html
@@ -149,8 +149,8 @@
         </div>
 
         <article class="single-casestudy-text-box animate-up">
-            <h2>Kode med versionsstyring i Github</h2>
-            <p>Da realiseringen af websitet skulle gå i gang, startede vi med at hardcode hele siden. Vi brugte under hele processen Github til at versionsstyre.</p>
+            <h2>Kode med versionsstyring</h2>
+            <p>Da realiseringen af websitet skulle gå i gang, startede vi med at hardcode hele siden. Vi brugte under hele processen Git til at versionsstyre.</p>
             <p>Derefter lavde vi al PHP, som dynamisk kunne hente indhold fra vores Wordpress CMS. Vi lavede også en søgefunktion, som tog udgangspunkt i Wordpress' egen søgefunktion.</p>
             <p>Til sidste lavede vi funktioner i Javascript. Vi lavede en slider til testimonials og en collapsible accordion for at dele store mængder af tekst op.</p>
             <p>Vi nåede ikke at lave brugerroller, men der lå en plan klar for, at vi ville oprette en brugerrolle for bloggere, som kun havde adgang til at oprette blogindlæg, og en brugerrolle for de ansatte på internatet, som gav adgang til at oprette nye adoptionsdyr.</p>
