--- a/index.html
+++ b/index.html
@@ -55,18 +55,19 @@
         </nav>
     </header>
     <main>
+        <a href="#om-louise">
+            <div class="scroll-chevron animate-opacity">
+                <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 512 512">
+                  <!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
+                  <style>
+                    svg { fill: #64ffda; }
+                  </style>
+                  <path d="M233.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L256 338.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z"/>
+                </svg> 
+            </div>
+        </a>
         <section class="hero viewheight">
-            <a href="#om-louise">
-                <div class="scroll-chevron animate-opacity">
-                    <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 512 512">
-                      <!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
-                      <style>
-                        svg { fill: #64ffda; }
-                      </style>
-                      <path d="M233.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L256 338.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z"/>
-                    </svg> 
-                </div>
-            </a>
+            
             
             <script type="module" src="https://unpkg.com/@splinetool/viewer@0.9.486/build/spline-viewer.js"></script>
             <spline-viewer class="animate-from-right" url="https://prod.spline.design/ER10EEuXH0aK5bWy/scene.splinecode"></spline-viewer>
@@ -163,7 +164,7 @@
                 <p class="center spacing animate-up">Vend kortene for at se niveau.</p>
                 <div class="skills-container">
                     <div class="skills">
-                        <!-- Flipcard-animation fra W3 Schools -->
+                        <!-- Flipcard-animation med inspiration fra W3 Schools: https://www.w3schools.com/howto/howto_css_flip_card.asp -->
                         <div class="flip-card stagger">
                             <div class="flip-card-inner">
                                 <div class="skill flip-card-front">
