--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 </h1>
                 <p class="underrubrik animate-hero">Jeg er en multimediedesign-studerende med en fortid i journalistik, der kan kode, designe og skrive. Jeg søger praktik som frontendudvikler.</p>
                 <br>
-                <div class="animate-hero"><a class="button" href="#kontakt">Stik mig en praktikplads! <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 512 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><style>svg{fill:#64ffda}</style><path d="M0 256a256 256 0 1 0 512 0A256 256 0 1 0 0 256zM241 377c-9.4 9.4-24.6 9.4-33.9 0s-9.4-24.6 0-33.9l87-87-87-87c-9.4-9.4-9.4-24.6 0-33.9s24.6-9.4 33.9 0L345 239c9.4 9.4 9.4 24.6 0 33.9L241 377z"/></svg></a></div>
+                <div class="animate-hero"><a class="button" href="#kontakt">Stik mig en praktikplads <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 512 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><style>svg{fill:#64ffda}</style><path d="M0 256a256 256 0 1 0 512 0A256 256 0 1 0 0 256zM241 377c-9.4 9.4-24.6 9.4-33.9 0s-9.4-24.6 0-33.9l87-87-87-87c-9.4-9.4-9.4-24.6 0-33.9s24.6-9.4 33.9 0L345 239c9.4 9.4 9.4 24.6 0 33.9L241 377z"/></svg></a></div>
             </article>
         </section> 
         <section id="om-louise" class="viewheight">
@@ -409,7 +409,7 @@
             <h2 class="center spacing">Kontakt</h2>
             <div class="kontakt">
                 <h3>Har du en praktikplads til mig?</h3>
-                <p>Så ring eller skriv til mig i dag!</p>
+                <p>Så ring eller skriv til mig i dag.</p>
                 <p>Tlf.: <a href="tel:29808554">29 80 85 54</a></p>
                 <p>Mail: <a href="mailto:louisedreehsen@gmail.com">louisedreehsen@gmail.com</a></p>
                 <p>Praktikperioden er 10 uger fra 22. januar 2024.</p>
@@ -431,7 +431,7 @@
         </section>
        
         <div class="copyright">
-        <p>&copy; 2023 Louise Lyck Dreehsen</p>
+        <p>Designet og kodet af Louise Lyck Dreehsen &copy; 2023.</p>
 
         </div>
     </footer>
