Mange små rettelser i case studies tekst

--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
     <!-- End Google Tag Manager -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="title" content="Frontend-udvikler og UX-designer Louise Lyck Dreehsen">
+    <meta name="description" content="Jeg er en multimediedesign-studerende i Aalborg med en fortid i journalistik, der kan kode, designe og skrive. Se min portfolio.">
+    <meta name="keywords" content="frontendudvikler, aalborg, frontend-udvikler, ux-designer, ux writer, louise lyck dreehsen">
+    <meta name="robots" content="index, follow">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <link rel="stylesheet" href="assets/style.css">
     <link href="https://fonts.cdnfonts.com/css/beckman-2" rel="stylesheet">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/icons/favicon-32x32.png">
@@ -168,7 +173,7 @@
                         <div class="flip-card stagger">
                             <div class="flip-card-inner">
                                 <div class="skill flip-card-front">
-                                    <img src="assets/images/HTML5_Badge.svg" alt="">
+                                    <img src="assets/images/HTML5_Badge.svg" alt="Html-logo">
                                     <p>HTML</p>
                                 </div>
                                 <div class="flip-card-back">
@@ -182,7 +187,7 @@
                         <div class="flip-card stagger">
                             <div class="flip-card-inner">
                                 <div class="skill flip-card-front">
-                                    <img src="assets/images/CSS3_logo.svg" alt="">
+                                    <img src="assets/images/CSS3_logo.svg" alt="CSS logo">
                                     <p>CSS</p>
                                 </div>
                                 <div class="flip-card-back">
@@ -195,7 +200,7 @@
                         <div class="flip-card stagger">
                             <div class="flip-card-inner">
                                 <div class="skill flip-card-front">
-                                    <img src="assets/images/Unofficial_JavaScript_logo_2.svg" alt="">
+                                    <img src="assets/images/Unofficial_JavaScript_logo_2.svg" alt="Javascript logo">
                                     <p>Javascript</p>
                                 </div>
                                 <div class="flip-card-back">
@@ -208,7 +213,7 @@
                         <div class="flip-card stagger">
                             <div class="flip-card-inner">
                                 <div class="skill flip-card-front">
-                                    <img src="assets/images/PHP-logo.svg" alt="">
+                                    <img src="assets/images/PHP-logo.svg" alt="PHP logo">
                                     <p>PHP</p>
                                 </div>
                                 <div class="flip-card-back">
@@ -221,7 +226,7 @@
                         <div class="flip-card stagger">
                             <div class="flip-card-inner">
                                 <div class="skill flip-card-front">
-                                    <img src="assets/images/Vue.js_Logo_2.svg" alt="">
+                                    <img src="assets/images/Vue.js_Logo_2.svg" alt="Vue logo">
                                     <p>Vue</p>
                                 </div>
                                 <div class="flip-card-back">
@@ -234,7 +239,7 @@
                         <div class="flip-card stagger">
                             <div class="flip-card-inner">
                                 <div class="skill flip-card-front">
-                                    <img src="assets/images/node-js.svg" alt="">
+                                    <img src="assets/images/node-js.svg" alt="node.js logo">
                                     <p>Node.js</p>
                                 </div>
                                 <div class="flip-card-back">
@@ -247,7 +252,7 @@
                         <div class="flip-card stagger">
                             <div class="flip-card-inner">
                                 <div class="skill flip-card-front">
-                                    <img src="assets/images/Wordpress_Blue_logo.png" alt="">
+                                    <img src="assets/images/Wordpress_Blue_logo.png" alt="Wordpress logo">
                                     <p>Wordpress</p>
                                 </div>
                                 <div class="flip-card-back">
@@ -260,7 +265,7 @@
                         <div class="flip-card stagger">
                             <div class="flip-card-inner">
                                 <div class="skill flip-card-front">
-                                    <img src="assets/images/adobe-xd.svg" alt="">
+                                    <img src="assets/images/adobe-xd.svg" alt="Adobe XD logo">
                                     <p>Adobe XD</p>
                                 </div>
                                 <div class="flip-card-back">
@@ -273,7 +278,7 @@
                         <div class="flip-card stagger">
                             <div class="flip-card-inner">
                                 <div class="skill flip-card-front">
-                                    <img src="assets/images/Adobe_Photoshop_CC_icon.svg" alt="">
+                                    <img src="assets/images/Adobe_Photoshop_CC_icon.svg" alt="Adobe Photoshop logo">
                                     <p>Photoshop</p>
                                 </div>
                                 <div class="flip-card-back">
@@ -286,7 +291,7 @@
                         <div class="flip-card stagger">
                             <div class="flip-card-inner">
                                 <div class="skill flip-card-front">
-                                    <img src="assets/images/Adobe_Premiere_Pro_CC_icon.svg" alt="">
+                                    <img src="assets/images/Adobe_Premiere_Pro_CC_icon.svg" alt="Adobe Premiere Pro logo">
                                     <p>Premiere Pro</p>
                                 </div>
                                 <div class="flip-card-back">
@@ -303,7 +308,7 @@
             <div class="center"><h2 class="animate-up">Projekter</h2></div>
             <p class="center animate-up">Projekter der spænder fra brugerundersøgelser og design til brugertest og kode.</p>
             <article class="case-study animate-up">
-                <img src="assets/images/Mockup-sejr.png" alt="">
+                <img src="assets/images/Mockup-sejr.png" alt="Mockup af Sejr og Davidsens dyrepension nye hjemmeside">
                 <article>
                     <h4>Projekt:</h4>
                     <h3>Wordpress theme lavet med advanced custom fields og PHP</h3>
@@ -321,7 +326,7 @@
                 </article>
             </article>
             <article class="case-study animate-up">
-                <img src="assets/images/Mockup-smerte.png" alt="">
+                <img src="assets/images/Mockup-smerte.png" alt="Mockup af Aalborg Smerte og Sportskliniks nye hjemmeside">
                 <article>
                     <h4>Projekt:</h4>
                     <h3>Responsivt website med headless CMS</h3>
@@ -367,7 +372,7 @@
         
                     </article>
             <article class="case-study animate-up little-project">
-                <img src="assets/images/NASA-mockup.png" alt="">
+                <img src="assets/images/NASA-mockup.png" alt="Mockup af Nasa-projekt">
                 <article>
                     <h4>Projekt:</h4>
                     <h3>Dagens NASA-billede hentet med API</h3>
@@ -384,7 +389,7 @@
                 </article>
             </article>
             <article class="case-study animate-up little-project">
-                <img src="assets/images/whack-mockup.png" alt="">
+                <img src="assets/images/whack-mockup.png" alt="Mockup af 'ram en muldvarp'-projekt">
                 <article>
                     <h4>Projekt:</h4>
                     <h3>Spil: Ram en muldvarp</h3>
@@ -431,11 +436,11 @@
         </section>
        
         <div class="copyright">
-        <p>Designet og kodet af Louise Lyck Dreehsen &copy; 2023.</p>
+        <p>Designet og kodet af</p>
+        <p> Louise Lyck Dreehsen &copy; 2023.</p>
 
         </div>
     </footer>
 </body>
-
 <!-- Credits: Ikoner fra font-awesome. Logoer fra Wikimedia Commons. Laptop-mockup fra Colorbox. -->
 </html>
