--- a/sejrdavidsen.html
+++ b/sejrdavidsen.html
@@ -28,7 +28,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/studio-freight/lenis@1.0.27/bundled/lenis.min.js"></script> 
     <script src="assets/script.js" defer></script>
-    <title>Frontend-udvikler Louise Lyck Dreehsen</title>
+    <title>Projekt: Sejr og Davidsens dyrepension</title>
 </head>
 <body>
     <!-- Google Tag Manager (noscript) -->
@@ -62,6 +62,7 @@
             <article>
                 <p>Projektets mål var at lave et Wordpress theme fra bunden med advanced custom fields og PHP. </p>
                 <p>Kunden var et dyreinternat, som havde brug for en ny hjemmeside, hvor det var muligt at få et overblik over adoptionsklare dyr, og at lave en blog, som kunne have både interne og eksterne skribenter.</p>
+                <p>Koden blev lavet på en lille uge.</p>
                 <br>
                 <a class="button animate-opacity" href="https://sejrdavidsen.mathiasskovbo.dk/">Se live version<svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 512 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><style>svg{fill:#64ffda}</style><path d="M0 256a256 256 0 1 0 512 0A256 256 0 1 0 0 256zM241 377c-9.4 9.4-24.6 9.4-33.9 0s-9.4-24.6 0-33.9l87-87-87-87c-9.4-9.4-9.4-24.6 0-33.9s24.6-9.4 33.9 0L345 239c9.4 9.4 9.4 24.6 0 33.9L241 377z"/></svg></a>
             </article>
@@ -92,14 +93,14 @@
               </table>
             </div>
         </div>
-        <img class="animate-up" src="assets/images/Mockup-sejr.png" alt="">
+        <img class="animate-up" src="assets/images/Mockup-sejr.png" alt="Mockup af Sejr og Davidsens dyrepensions nye hjemmeside">
         <article class="single-casestudy-text-box animate-up">
             <h2>Den store udfordring</h2>
             <p>Udfordringen i dette projekt var at udvikle et website fra bunden og lave det til et Wordpress theme med PHP og Javascript.</p>
             <p>Vi havde tidligere brugt Wordpress som headless CMS, og kendte en smule til advanced custom fields, men det var første gang, at vi skulle arbejde med PHP og lave et theme med custom post types.</p>
-            <p>Det var en stor opgave, og derfor var designet og indholdet sekundært i dette projekt: fokus var på koden og at bygge CMS'et op, så det var brugervenligt.</p>
+            <p>Det var en stor opgave, og derfor var designet og indholdet sekundært i dette projekt: fokus var på koden og at bygge CMS'et op, så det var brugervenligt for kunden.</p>
         </article>
-        <img class="animate-up" src="assets/images/sejr-blog.png" alt="">
+        <img class="animate-up" src="assets/images/sejr-blog.png" alt="Mockup af blogsektionen">
         <article class="single-casestudy-text-box animate-up">
             <h2>Informations-arkitektur</h2>
             <p>I projektet skulle vi udvælge og realisere 5-6 sider, og vi havde frit valg ift. hvilke sider det skulle være.</p>
@@ -109,12 +110,12 @@
            
         </article>
         <div class="white-bg">
-            <img src="assets/images/sejr-sitemap.png" alt="">
+            <img src="assets/images/sejr-sitemap.png" alt="Mockup af content sitemap">
         </div>
         <article class="single-casestudy-text-box animate-up">
             <h2>Designprocessen</h2>
             <p>Selv om designet var sekundært i dette projekt, skulle det stadig laves, og i gruppen blev vi enige om at lave et design, der skilte sig ud fra tidligere projekter og eksperimenterede med brugen af svg'er som sektionsskillere.</p>
-            <p>Det gjorde vi, fordi det gav os muligheden for at lære noget nyt ift. kodedelen.</p>
+            <p>Det gjorde vi, fordi det gav os mulighed for at lære noget nyt ift. kodning.</p>
             <p>Valget faldt på et farverigt design med en hero, hvor der var to CTA-indgange til virksomheden, som bestod af to dele: et dyreinternat og en kommerciel dyrepension.</p>
             <p>Vi startede designprocessen ved at skitsere på papir og derefter øge fidelity med en wireframe og efterfølgende hifi-mockup i Adobe XD.</p>
         </article>
@@ -125,25 +126,25 @@
             </figure>
 
             <figure>
-                <img src="assets/images/sejr-realiseret.png" alt="Wireframe">
+                <img src="assets/images/sejr-realiseret.png" alt="Realiseret hjemmeside">
                 <figcaption>Mockup.</figcaption>
             </figure>
         </div>
         <article class="single-casestudy-text-box animate-up">
             <h2>Indholdsudvikling med custom post types og advanced custom fields</h2>
-            <p>Nu begyndte den spændende del af projektet: Arbejdet med Wordpress.</p>
+            <p>Nu begyndte den spændende del af projektet: arbejdet med Wordpress.</p>
             <p>Vi havde tidligere brugt Wordpress som headless CMS, så vi kendte til advanced custom fields i forvejen, men det var første gang, vi skulle oprette custom post types og lave et helt theme med PHP.</p>
             <p>Vi besluttede at oprette custom post types for adoptionsdyrene og for blogindlægenne, da det ville give kunden et overskueligt og brugervenligt CMS, hvor det efterfølgende var muligt at lave brugerroller til medarbejderne med særskilt adgang til de dele af siden, de skulle kunne redigere og skrive til. </p>
         </article>
 
         <div class="image-gallery">
             <figure>
-                <img src="assets/images/sejr-dyreoversigt.png" alt="Wireframe">
+                <img src="assets/images/sejr-dyreoversigt.png" alt="Oversigt over adoptionsklare dyr">
                 <figcaption>Oversigt over adoptionsdyrene (med search-funktion).</figcaption>
             </figure>
 
             <figure>
-                <img src="assets/images/sejr-enkeltdyr.png" alt="Wireframe">
+                <img src="assets/images/sejr-enkeltdyr.png" alt="Side med enkelt dyr">
                 <figcaption>Sideopbygningen for det enkelte adoptionsdyr.</figcaption>
             </figure>
         </div>
@@ -155,7 +156,7 @@
             <p>Til sidste lavede vi funktioner i Javascript. Vi lavede en slider til testimonials og en collapsible accordion for at dele store mængder af tekst op.</p>
             <p>Vi nåede ikke at lave brugerroller, men der lå en plan klar for, at vi ville oprette en brugerrolle for bloggere, som kun havde adgang til at oprette blogindlæg, og en brugerrolle for de ansatte på internatet, som gav adgang til at oprette nye adoptionsdyr.</p>
         </article>
-        <img class="animate-up" src="assets/images/sejr-kode.png" alt="">
+        <img class="animate-up" src="assets/images/sejr-kode.png" alt="Billede af kode i php og html">
         <article class="single-casestudy-text-box animate-up">
             <h2>Konklusion</h2>
             <p>Vi kom i mål med at lave en prototype på et Wordpress theme til Sejr og Davidsens dyrepension og -internat.</p>
@@ -171,12 +172,12 @@
             <h2 class="center spacing">Kontakt</h2>
             <div class="kontakt">
                 <h3>Har du en praktikplads til mig?</h3>
-                <p>Så ring eller skriv til mig i dag!</p>
+                <p>Så ring eller skriv til mig i dag.</p>
                 <p>Tlf.: <a href="tel:29808554">29 80 85 54</a></p>
                 <p>Mail: <a href="mailto:louisedreehsen@gmail.com">louisedreehsen@gmail.com</a></p>
                 <p>Praktikperioden er 10 uger fra 22. januar 2024.</p>
             </div>
-            <div class="verticalBox animate-up">
+            <div class="verticalBox animate-up-some">
                 <div class="logo">
                   <a href="https://github.com/Dreehsen/">
                     <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" height="35px" viewBox="0 0 496 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M165.9 397.4c0 2-2.3 3.6-5.2 3.6-3.3.3-5.6-1.3-5.6-3.6 0-2 2.3-3.6 5.2-3.6 3-.3 5.6 1.3 5.6 3.6zm-31.1-4.5c-.7 2 1.3 4.3 4.3 4.9 2.6 1 5.6 0 6.2-2s-1.3-4.3-4.3-5.2c-2.6-.7-5.5.3-6.2 2.3zm44.2-1.7c-2.9.7-4.9 2.6-4.6 4.9.3 2 2.9 3.3 5.9 2.6 2.9-.7 4.9-2.6 4.6-4.6-.3-1.9-3-3.2-5.9-2.9zM244.8 8C106.1 8 0 113.3 0 252c0 110.9 69.8 205.8 169.5 239.2 12.8 2.3 17.3-5.6 17.3-12.1 0-6.2-.3-40.4-.3-61.4 0 0-70 15-84.7-29.8 0 0-11.4-29.1-27.8-36.6 0 0-22.9-15.7 1.6-15.4 0 0 24.9 2 38.6 25.8 21.9 38.6 58.6 27.5 72.9 20.9 2.3-16 8.8-27.1 16-33.7-55.9-6.2-112.3-14.3-112.3-110.5 0-27.5 7.6-41.3 23.6-58.9-2.6-6.5-11.1-33.3 2.6-67.9 20.9-6.5 69 27 69 27 20-5.6 41.5-8.5 62.8-8.5s42.8 2.9 62.8 8.5c0 0 48.1-33.6 69-27 13.7 34.7 5.2 61.4 2.6 67.9 16 17.7 25.8 31.5 25.8 58.9 0 96.5-58.9 104.2-114.8 110.5 9.2 7.9 17 22.9 17 46.4 0 33.7-.3 75.4-.3 83.6 0 6.5 4.6 14.4 17.3 12.1C428.2 457.8 496 362.9 496 252 496 113.3 383.5 8 244.8 8zM97.2 352.9c-1.3 1-1 3.3.7 5.2 1.6 1.6 3.9 2.3 5.2 1 1.3-1 1-3.3-.7-5.2-1.6-1.6-3.9-2.3-5.2-1zm-10.8-8.1c-.7 1.3.3 2.9 2.3 3.9 1.6 1 3.6.7 4.3-.7.7-1.3-.3-2.9-2.3-3.9-2-.6-3.6-.3-4.3.7zm32.4 35.6c-1.6 1.3-1 4.3 1.3 6.2 2.3 2.3 5.2 2.6 6.5 1 1.3-1.3.7-4.3-1.3-6.2-2.2-2.3-5.2-2.6-6.5-1zm-11.4-14.7c-1.6 1-1.6 3.6 0 5.9 1.6 2.3 4.3 3.3 5.6 2.3 1.6-1.3 1.6-3.9 0-6.2-1.4-2.3-4-3.3-5.6-2z"/></svg>
@@ -193,7 +194,8 @@
         </section>
        
         <div class="copyright">
-        <p>&copy; 2023 Louise Lyck Dreehsen</p>
+        <p>Designet og kodet af</p>
+        <p> Louise Lyck Dreehsen &copy; 2023.</p>
 
         </div>
     </footer>
