Små css-ændringer ift mobil

--- a/smerteklinik.html
+++ b/smerteklinik.html
@@ -130,13 +130,13 @@
             <p>For at sikre at vores navigation og informationsarkitektur var brugervenlig, udførte vi flere slags brugertest. </p>
             <h3>1. Think aloud test</h3>
             <p>Vi lavede bl.a. to think aloud test på sammenlagt 10 personer. En think aloud test er en brugertest, hvor en bruger skal udføre en række opgaver på det nye website og samtidig sige alle deres tanker højt. Det er med til at fange eventuelle problemer, der måtte være med at navigere rundt på siden.</p>
-            <p>Testene afslørede bl.a. et problem blandt ældre, som ikke opfattede, at man kunne scrolle ned fra heroen. Løsninge blev en pil ned, som markerede, at der var mere indhold.</p>
+            <p>Testene afslørede bl.a. et problem blandt ældre, som ikke opfattede, at man kunne scrolle ned fra heroen. Løsningen blev en pil ned, som markerede, at der var mere indhold.</p>
             <h3>2. Card sorting</h3>
             <p>Da der var meget indhold på siden og det var svært at få det kategoriseret i navigationen, udførte vi også en card sorting, hvor vi fik en række testpersoner til at kategorisere alle underpunkterne i navigationen.</p>
             <p>Card sorting afslørede en række udfordringer i vores navigation ift. punkterne 'Det behandler vi' og 'vores metoder', som havde andre navne og herfter blev ændret.</p>
             <h3>3. Tree testing</h3>
             <p>For at teste navigerbarheden på siden gennemførte vi også en tree-test af vores navigation på hjemmesiden. Også den test afslørede problemer med navngivningen af punkter i vores navigation, som derfor blev itereret og testet igen for at sikre, at den bedst mulige løsning var fundet.</p>
-            <h3>5 second test</h3>
+            <h3>4. Five-second-test</h3>
             <p>Vi udførte også en five second test på 15 personer under designet af siden. Testen afslørede et grundlæggende problem med at afkode, at hjemmesiden var for en fysioterapeut. Det er bl.a. fordi klinikkens navn bruger ordet 'smerteklinik' og ikke 'fysioterapi'. Derfor blev designet ændret, så det tydeligt fremgik i toppen, at det handlede om fysioterapi.</p>
         </div>
         
