Mange små ændringer

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="title" content="Frontend-udvikler og UX-designer Louise Lyck Dreehsen">
-    <meta name="description" content="Jeg er en multimediedesign-studerende i Aalborg med en fortid i journalistik, der kan kode, designe og skrive. Se min portfolio.">
+    <meta name="description" content="Frontendudvikler i Aalborg med en fortid i journalistik, der kan kode, designe og skrive. Se min portfolio.">
     <meta name="keywords" content="frontendudvikler, aalborg, frontend-udvikler, ux-designer, ux writer, louise lyck dreehsen">
     <meta name="robots" content="index, follow">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
