Emoji-besked i document title

--- a/smerteklinik.html
+++ b/smerteklinik.html
@@ -26,6 +26,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="assets/icons/favicon-16x16.png">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/studio-freight/lenis@1.0.27/bundled/lenis.min.js"></script> 
     <script src="assets/script.js" defer></script>
     <title>Projekt: Aalborg Smerte- og Sportsklinik</title>
 </head>
